# BCG_strat

./: .gitignore  EDA.py  README.md  churn_model.ipynb  helpers.py  model.pth  requirements.txt  setup.cfg  tpot_exported_pipeline.py
churn_predictor/: app.py  helpers.py  model.pth  rnns.py  tpot_exported_pipeline.py
