[metadata]
name = churn_predictor
version = 0.0.1
description = A package to predict churners
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    pandas
    polars
    seaborn
    torch
python_requires = >=3.8

[options.entry_points]
console_scripts =
    get-churn-predictions = churn_predictor.app:main